--- a/static/css/login.css
+++ b/static/css/login.css
@@ -7,15 +7,15 @@
   font-family: 'Poppins', sans-serif;
 }
 body{
-  min-height: 100vh;
+
   width: 100%;
   background: #009579;
 }
 .container{
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  /* top: 50%; */
+  left: 35%;
+  /* transform: translate(-50%,-50%); */
   max-width: 430px;
   width: 100%;
   background: #fff;
