--- a/templates/authentication/customer_register.html
+++ b/templates/authentication/customer_register.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
@@ -12,18 +13,43 @@
     <input type="checkbox" id="check">
     <div class="login form">
       <header>Sign up</header>
-      <form action="#" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        {% comment %} {{form.first_name}}
-        {{form.last_name}}
-        {{form.email}}
-        {{form.password1|striptags}}
-        {{form.password2|striptags}} {% endcomment %}
-        {% comment %} {{form.first_name}} {% endcomment %}
-        <a href="#">Forgot password?</a>
-        <input type="submit" class="button" value="sign up">
-      </form>
+        <form action="#" method="POST">
+          {% csrf_token %}
+          {% for field in form %}
+          {% if field.errors %}
+          <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+            <strong>{{field.errors}}</strong>
+          </div>
+          {% endif %}
+          {{field.label}}
+          {{field}}
+          {% endfor %}
+          {% if forms.errors %}
+          {{forms.errors}}
+          {% endif %}
+          <input type="submit" class="button" value="sign up">
+        </form>
+      {% comment %} {% if form.errors %}
+        {% for i in form.errors %}
+          <div class="alert alert-danger alert-dismissible" role="alert">
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+              <strong>{{i}}</strong>
+          </div>
+        {% endfor %} {% endcomment %}
+          {% comment %} <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+            <strong>{{form.last_name.errors}}</strong>
+          </div>
+          <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+          <strong>{{form.email.errors}}</strong>
+          </div>
+          <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+          <strong>{{form.password.errors}}</strong>
+          </div> {% endcomment %}
+      {% comment %} {% endif %} {% endcomment %}
       {% comment %} <div class="signup"> {% endcomment %}
         <span class="signup">Already have an account?
          <a href="{% url 'customer_login'%}">login</a>
@@ -31,5 +57,6 @@
       {% comment %} </div> {% endcomment %}
     </div> 
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
