login through social authentication

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -58,7 +58,6 @@ body{
  }
 .form a{
   font-size: 16px;
-  color: #009579;
   text-decoration: none;
 }
 .form a:hover{
@@ -82,7 +81,7 @@ body{
   text-align: center;
 }
 .signup label{
-  color: #009579;
+  /* color: #009579; */
   cursor: pointer;
 }
 .signup label:hover{
