--- a/templates/account/otp.html
+++ b/templates/account/otp.html
@@ -17,7 +17,7 @@
         <form action="{% url 'registrationOtp' %}" method="POST">
           {% csrf_token %}
            <input type="hidden" name="email" value="{{email}}">
-           <input type="hidden" name="realotp" value="{{otp}}">
+           {% comment %} <input type="hidden" name="realotp" value="{{otp}}"> {% endcomment %}
            <input type="number" placeholder="OTP", name="otp" >
            <input type="submit" class="button" value="submit" name="submit">
            <input type="submit" class="btn btn-danger btn-sm" name="resendotp" value="resendotp">
