--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,7 +8,7 @@
 
 {% block content %}
       <header>Sign up</header>
-        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        <form  method="post" >
           {% csrf_token %}
           {% for field in form %}
           {% if field.errors %}
