--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -10,5 +10,6 @@
     {% csrf_token %}
     {{request.user}}
     <a href="{% url 'logout' %}" type="submit" class="button">logout</a>
+    <a href="{% url 'resetpassword' %}">reset password</a>
 </body>
 </html>
