--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -32,7 +32,7 @@
     
 {% if user.is_authenticated %}
 <p>helooo</p>
-<a href="{% url 'resetpassword' %}">reset password</a>
+<a href="{% url 'resetpassword' %}">change password</a>
 {% endif %}
 {% endblock %}
    
