--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -20,9 +20,9 @@
           {{field.label}}
           {{field}}
           {% endfor %}
-          {% if forms.errors %}
+          {% comment %} {% if forms.errors %}
           {{forms.errors}}
-          {% endif %}
+          {% endif %} {% endcomment %}
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
