--- a/templates/account/changepassword.html
+++ b/templates/account/changepassword.html
@@ -7,7 +7,7 @@
                 {% csrf_token %}
                 {% if messages %}
                     {% for message in messages %}
-                    <div class="alert alert-danger alert-dismissible" role="alert">
+                    <div class="alert {{message.tags}} alert-dismissible" role="alert">
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
                         <strong>{{message}}</strong>
                     </div>
