--- a/templates/account/otp.html
+++ b/templates/account/otp.html
@@ -1,29 +1,19 @@
+{% extends 'account/base.html' %}
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'css/login.css' %}">
-</head>
-<body>
-  <div class="container">
-    <input type="checkbox" id="check">
-    <div class="login form">
-      {% if messages %}
-        {% for message in messages  %}
-        <div class="alert {{message.tags}} alert-dismissible" role="alert">
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
-          <strong>{{message}}</strong>
-        </div>
-        {% endfor %}
-        {% endif %}
+{% block content %}
+      
       <header>OTP verification</header>
+          {% if messages %}
+          {% for message in messages  %}
+          <div class="alert {{message.tags}} alert-dismissible" role="alert">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"><span aria-hidden="true"></span></button>
+            <strong>{{message}}</strong>
+          </div>
+          {% endfor %}
+          {% endif %}
         <form action="{% url 'registrationOtp' %}" method="POST">
           {% csrf_token %}
+          
            <input type="hidden" name="email" value="{{email}}">
            {% comment %} <input type="hidden" name="realotp" value="{{otp}}"> {% endcomment %}
            <input type="number" placeholder="OTP", name="otp" >
@@ -32,8 +22,4 @@
         </form>
         
 
-    </div> 
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
