--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
+#logoimage {
+ height: 150px;
+ width: 150px;
+ position: relative;
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
