--- a/templates/products/base.html
+++ b/templates/products/base.html
@@ -31,7 +31,7 @@
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
                 <a href="" class="text-decoration-none">
-                    <h1 class="m-0 display-5 font-weight-semi-bold">One Click-pick</h1>
+                    <img src="{% static 'images/logo-black.svg' %}" id="logoimage">
                 </a>
             </div>
             <div class="col-lg-6 col-6 text-left">
@@ -63,6 +63,12 @@
     <!-- Navbar Start -->
     <div class="container-fluid mb-5">
         <div class="row border-top px-xl-5">
+            {% block category %}
+            
+            {% endblock %}
+
+
+            
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
@@ -76,7 +82,7 @@
                             <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
                             <a href="{% url 'createproduct' %}" class="nav-item nav-link ">Add product</a>
                             <a href="{% url 'products' %}" class="nav-item nav-link ">products</a>
-                            <a href="shop.html" class="nav-item nav-link">Shop</a>
+                            <a href="{% url 'shop' %}" class="nav-item nav-link">Shop</a>
                             <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -93,6 +99,10 @@
                         </div>
                     </div>
                 </nav>
+                {% block carsoule %}
+                
+                {% endblock  %}
+                
             </div>
         </div>
     </div>
