--- a/templates/products/shop.html
+++ b/templates/products/shop.html
@@ -164,7 +164,6 @@
                               </div>
                           </div>
                       </form>
-                      {{category_filter.form}}
                       <div class="dropdown ml-4">
                           <button class="btn border dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
                                   aria-expanded="false">
@@ -178,7 +177,7 @@
                       </div>
                   </div>
               </div>
-              {% for p in products %}
+              {% for p in page_obj  %}
               <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                   <div class="card product-item border-0 mb-4">
                       <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
@@ -197,9 +196,52 @@
                   </div>
               </div>
               {% endfor %}
-            </div>
-        </div>
-        <!-- Shop Product End -->
-    </div>
+              
+
+              <div class="col-12 pb-1">
+                  <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center mb-3">
+                        <li class="page-item ">
+                            {% if page_obj.has_previous %}
+                        
+                        <a class="page-link" href="?page={{page_obj.previous_page_number}}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span> 
+                            
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% comment %} {% with s = page. %} {% endcomment %}
+                    {% for page in page_obj.paginator.page_range %}
+                    {% if page_obj.number == page %}
+                    <li class="page-item active">
+                        <a class="page-link" href="?page={{page}}">
+                            {{page}}</a></li>
+                    {% else %}
+                    <li class="page-item ">
+                        <a class="page-link" href="?page={{page}}">
+                            {{page}}</a></li>
+                    {% endif %}  
+                    
+                    {% endfor %}
+                      
+                      
+                      {% comment %} {% endwith %} {% endcomment %}
+                    
+                    {% if page_obj.has_next  %}
+                        <a class="page-link" href="?page={{page_obj.next_page_number}}" aria-label="Next">
+                          <span aria-hidden="true">&raquo;</span>
+                          <span class="sr-only">Next</span></a>
+                      </li>
+                      {% endif %}
+                    </ul>
+                  </nav>
+              </div>
+          </div>
+      </div>
+      <!-- Shop Product End -->
   </div>
+</div>
+<!-- Shop End -->
+
 {% endblock %}
